--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "llllllllllllllll"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+rocket = { version = "0.5.0-rc.2", features = ["json"] }
+serde = "1.0.139"
+lazy_static = "1.4.0"
+tray-item = "0.7.0"
+
+[build-dependencies]
+windres = "*"
