--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "llllllllllllllll"
 version = "1.0.0"
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
 lazy_static = "1.4.0"
@@ -12,4 +13,4 @@ tokio = { version = "1", features = ["full"] }
 tray-item = "0.7.0"
 
 [build-dependencies]
-windres = "*"
+embed-resource = "1.7.3"
